syntax = "proto3";

option csharp_namespace = "UserService";

package Speciality;

service SpecialityService{
  rpc CreateSpeciality(CreateSpecialityRequest) returns (CreateSpecialityResponse);
  rpc DeleteSpeciality(DeleteSpecialityRequest) returns (DeleteSpecialityResponse);
  rpc SoftDeleteSpeciality(SoftDeleteSpecialityRequest) returns (SoftDeleteSpecialityResponse);
  rpc EditSpeciality(EditSpecialityRequest) returns (EditSpecialityResponse);
}

message DecimalValue {
  // Whole units part of the amount
  int64 units = 1;
  // Nano units of the amount (10^-9)
  // Must be same sign as units
  sfixed32 nanos = 2;
}

message CreateSpecialityRequest{
  string Name = 1;
  string Abbreavation = 2;
  DecimalValue Cost = 3;
  uint32 DurationMonths = 4;
}

message CreateSpecialityResponse{
  int32 Id = 1;
}

message DeleteSpecialityRequest{
  int32 Id = 1;
}

message DeleteSpecialityResponse{
  int32 Id = 1;
}

message SoftDeleteSpecialityRequest{
  int32 Id = 1;
}

message SoftDeleteSpecialityResponse{
  int32 Id = 1;
}

message EditSpecialityRequest{
  int32 Id = 1;
  string Name = 2;
  string Abbreavation = 3;
  DecimalValue Cost = 4;
  uint32 DurationMonths = 5;
  bool IsDeleted = 6;
}

message EditSpecialityResponse{
  int32 Id = 1;
}